formularios nombre, apellido, mail y mensaje

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,4 +86,11 @@ footer {
     color: white;
     padding: 1rem;
 }
-
+#tc{
+    font-family: 'Koulen', cursive;
+    color: orange;
+    font-size: larger;
+}
+form{
+    color: rgb(255, 166, 0);
+}
