--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,22 +21,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#inicio">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="/">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#novedades">Novedades</a>
+                            <a class="nav-link" href="/nov">Novedades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#historia">Historia</a>
+                            <a class="nav-link" href="/historia">Historia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#nosotros">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#visitanos">Visitanos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contacto">Contacto</a>
+                            <a class="nav-link" href="/contacto">Contacto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled">Proximamente</a>
@@ -46,7 +40,9 @@
             </div>
         </nav>
     </div>
+    <div id="primerback">
     {{{body}}}
+    </div>
     <footer class="container-fluid">
         <div class="text-end">Diseñado por Matias Pennino 2022</div>
     </footer>
