--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid col-sm-3" id="pres">
+<div class="container-fluid" id="pres">
     <h1>
         Quienes somos:
     </h1>
@@ -6,4 +6,5 @@
         Somos una organizacion sin fines de lucro que busca informar sobre los gatos, sus cuidados y como
         adiestrarlos
     </p>
+
 </div>
