--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    height: 100%;
+    height: fit-content;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -76,5 +76,8 @@ footer {
 }
 
 form {
+    color: rgb(255, 166, 0);
+}
+#msj {
     color: rgb(255, 166, 0);
 }
