--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+   
 }
 
 #primerback {
@@ -12,7 +13,9 @@ body {
     background-image: url('../images/back1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    min-height: 600px;
+    display: flex;
+    flex-direction: column;
 }
 
 
