inicio de heroku

--- a/views/historia.hbs
+++ b/views/historia.hbs
@@ -6,9 +6,7 @@
         <h2>
             Nuestra historia:
         </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quisquam ex reprehenderit pariatur minus
-            rerum,
-            recusandae exercitationem blanditiis possimus ab ipsum aliquid .</p>
+        <p>Nuestro origen se remonta a 1987, cuando Raul Martinez, padre de nuestro actual presidente, decidio ponerle fin a una perseccucion masiva a los gatos callejeros que deambulaban por su pueblo. Organizando eventos en los cuales concientizaba sobre el maltrato a los animales, logro tener reconocimiento y formar lo que hoy es Gatunos </p>
     </div>
 </div>
 
@@ -21,30 +19,21 @@
             <img src="images/persona1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Carlos Martinez</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae veniam iusto
-                    dolorem
-                    corporis dignissimos enim numquam nemo excepturi tempora, cupiditate neque asperiores iure
-                    eum.</p>
+                <p class="card-text">Hijo del fundador Raul Martinez, se convirtio en presidente hace ya un lustro, y desde entonces Gatunos no ha dejado de llegar a mas gatos que lo necesiten, ya sea brindando un techo a los gatos de la calle o una vacuna para aquel que no este al dia.</p>
             </div>
         </div>
         <div class="card">
             <img src="images/persona2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Agustina Rodriguez</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae veniam iusto
-                    dolorem
-                    corporis dignissimos enim numquam nemo excepturi tempora, cupiditate neque asperiores iure
-                    eum.</p>
+                <p class="card-text">Nuestra representante y organizadora de eventos, Agustina se encarga de manejar mucho de lo que se suele hacer en cada evento importante de la empresa, siendo una de sus tareas mas importantes la logistica y administracion de los trabajadores</p>
             </div>
         </div>
         <div class="card">
             <img src="images/persona3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Camila Torres</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae veniam iusto
-                    dolorem
-                    corporis dignissimos enim numquam nemo excepturi tempora, cupiditate neque asperiores iure
-                    eum.</p>
+                <p class="card-text">La principal encargada del impacto de Gatunos en el pais es sin duda Camila, su trabajo es manejar la publicidad y la forma en la que la empresa se vende a la gente, no siendo solo uno de mas proyectos, sino que es lo que se necesita para ayudar a muchos animales</p>
             </div>
         </div>
     </div>
