--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,5 +6,19 @@
         Somos una organizacion sin fines de lucro que busca informar sobre los gatos, sus cuidados y como
         adiestrarlos
     </p>
+    <div class="row">
+        <div class="col-3">
+            <p class="subtitulo">Conoce mas de nosotros:</p>
+            <a href="/routes/historia.js"><button>Nuestra historia</button></a>
+        </div>
+        <div class="col-4">
+            <p class="subtitulo">¿Quieres visitarnos?</p>
+            <a href="/routes/contacto.js"><button>donde estamos</button></a>
+        </div>
+        <div class="col-4">
+            <p class="subtitulo">Mira las noticias de ultimo momento</p>
+            <a href="/routes/nov.js"><button>Lo mas nuevo</button></a>
+        </div>
+    </div>
 
 </div>
