--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,7 +40,7 @@
             </div>
         </nav>
     </div>
-    <div id="primerback">
+    <div id="primerback" class="container-fluid">
     {{{body}}}
     </div>
     <footer class="container-fluid">
