--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,15 +9,15 @@
     <div class="row">
         <div class="col-3">
             <p class="subtitulo">Conoce mas de nosotros:</p>
-            <a href="/routes/historia.js"><button>Nuestra historia</button></a>
+            <a href="/historia"><button>Nuestra historia</button></a>
         </div>
         <div class="col-4">
             <p class="subtitulo">¿Quieres visitarnos?</p>
-            <a href="/routes/contacto.js"><button>donde estamos</button></a>
+            <a href="/contacto"><button>donde estamos</button></a>
         </div>
         <div class="col-4">
             <p class="subtitulo">Mira las noticias de ultimo momento</p>
-            <a href="/routes/nov.js"><button>Lo mas nuevo</button></a>
+            <a href="/novedades"><button>Lo mas nuevo</button></a>
         </div>
     </div>
 
