--- a/views/contacto.hbs
+++ b/views/contacto.hbs
@@ -22,7 +22,7 @@
                 <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" name="mensaje" rows="3"></textarea>
             </div>
-            <button type="submit">enviar</button>
+            <button class="btn btn-success" type="submit">enviar</button>
         </form>
         {{#if msj}}
         <p id="msj">{{msj}}</p>
